--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,14 +11,17 @@
 <table *ngIf='listOfBooks.length>0'>
   <tr>
     <td>TITLE</td>
-    <td>SUBTITLE</td>
     <td>AUTHORS</td>
     <td>PRICE</td>
+    <td>PROMOTION</td>
   </tr>
   <tr *ngFor="let book of listOfBooks | filter: searchText: searchCategory" >
-      <td>{{book.title}}</td>
-      <td>{{book.subtitle}}</td>
+      <td style="font-style:italic">{{book.title}}</td>
       <td>{{book.authors}}</td>
-      <td>{{book.price}}</td>
+      <div *ngIf="property" >
+        <td>{{book.price}}</td>
+        <td style="color: red">{{book.promotion}}</td>
+      </div>
+
   </tr>
 </table>
