--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,5 +3,23 @@ table, td {
   border-collapse: collapse;
   padding: 5px;
 }
+table, th {
+  border: 1px solid grey;
+  border-collapse: collapse;
+  padding: 5px;
+}
 
-table tr:hover td {background-color: #f5f5f5;}
+table tr:hover td {background-color: rgb( 	205, 192, 176);}
+
+.title {
+  font-style: italic;
+}
+
+.promotionPrice {
+  color: red;
+}
+
+.href {
+  color: #000000;
+  text-decoration: none
+}
