Sprint#3, Task#147, dodaje mechanizm sortowania wyników
- stworzony pipe sortBy który w zalezności od przekazanego stringa sortuje po wybranej kolumnie
- kolumnę wybieramy po naciśnięciu na odpowiadający jej wiersz  w tabeli
- po przyciśnieciu, koło pola pokazuje się strzałka symbolizująca typ sortowania

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,7 +12,12 @@ table tr:hover td {
   font-style: italic;
 }
 
+.price {
+  width: 100px;
+}
+
 .promotionPrice {
+  width:150px;
   color: red;
 }
 
@@ -21,3 +26,18 @@ table tr:hover td {
   text-decoration: none
 }
 
+.arrow {
+  height: 15px;
+}
+
+.downarrow {
+  height: 15px;
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  writing-mode: tb-rl;
+}
+
+.first {
+  text-align: left;
+}
