--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
+
 <img src="/assets/img/logo.png">
+
+<br>
 <br>
 <input [(ngModel)]="searchText" placeholder="search text goes here">
 <select [(ngModel)]="searchCategory">
@@ -9,25 +12,38 @@
   <option value="bookstore">Bookstore</option>
 </select>
 <br><br>
-<table align="center" *ngIf='listOfBooks.length>0'>
-  <tr class="first" (click)=changeOrder($event)>
-    <th>#</th>
-    <th>IMAGE</th>
-    <th abbr='title'>TITLE<span *ngIf="sortedBy==='title'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
-    <th abbr='authors'>AUTHORS<span *ngIf="sortedBy==='authors'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
-    <th abbr='price'>PRICE<span *ngIf="sortedBy==='price'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
-    <th abbr='promotion'>PROMOTION<span *ngIf="sortedBy==='promotion'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
-    <th>BOOKSTORE</th>
-    <th>LINK</th>
-  </tr>
-  <tr *ngFor="let book of listOfBooks | filter: searchText: searchCategory | sortBy: sortedBy: sortingType ; let i = index" >
-      <td>{{i}}</td>
-      <td><img src="{{book.image}}"></td>
-      <td class="title">{{book.title}}</td>
-      <td >{{book.authors}}</td>
-      <td class="price">{{book.price}}</td>
-      <td class="promotionPrice">{{book.promotion}}</td>
-      <td>{{book.bookstore}}</td>
-      <td><a href="{{book.url}}" class="href">Sprawdź</a></td>
-  </tr>
-</table>
+<div class="container">
+  <div class=row>
+    <div class="col">
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-secondary">Left</button>
+            <button type="button" class="btn btn-secondary">Middle</button>
+            <button type="button" class="btn btn-secondary">Right</button>
+        </div>
+    </div>
+    <div class="col">
+      <table  *ngIf='listOfBooks.length>0'>
+        <tr class="first" (click)=changeOrder($event)>
+          <th>#</th>
+          <th>IMAGE</th>
+          <th abbr='title'>TITLE<span *ngIf="sortedBy==='title'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
+          <th abbr='authors'>AUTHORS<span *ngIf="sortedBy==='authors'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
+          <th class='price' abbr='price'>PRICE<span *ngIf="sortedBy==='price'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
+          <th abbr='promotion'>PROMOTION<span *ngIf="sortedBy==='promotion'" [ngClass]="sortingType===true ? 'arrow' : 'downarrow' ">↓</span></th>
+          <th>BOOKSTORE</th>
+          <th>LINK</th>
+        </tr>
+        <tr *ngFor="let book of listOfBooks | filter: searchText: searchCategory | sortBy: sortedBy: sortingType ; let i = index" >
+            <td>{{i}}</td>
+            <td><img src="{{book.image}}"></td>
+            <td class="title">{{book.title}}</td>
+            <td >{{book.authors}}</td>
+            <td class="price">{{book.price}}</td>
+            <td class="promotionPrice">{{book.promotion}}</td>
+            <td>{{book.bookstore}}</td>
+            <td><a href="{{book.url}}" class="href">Sprawdź</a></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
