--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,36 @@
-<p>
-  login works!
-</p>
+<div *ngIf="isLoggedIn; else loggedOut">
+    Logged in as {{roles}}.
+  </div>
+
+  <ng-template #loggedOut>
+    <div class="container center-div" style="max-width:350px;">
+      <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+        <div class="form-group">
+          <label for="username">{{ 'USERNAME' }}</label>
+          <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
+            required />
+          <div *ngIf="f.submitted && username.invalid">
+            <div *ngIf="username?.errors.required">{{ 'USERNAME IS REQUIRED'  }}</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="password">{{ 'PASSWORD'}}</label>
+          <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
+            required minlength="6" />
+          <div *ngIf="f.submitted && password.invalid">
+            <div *ngIf="password?.errors.required">{{ 'PASSWORD IS REQUIRED' }}</div>
+            <div *ngIf="password?.errors.minlength">{{ 'PASSWORD 6 CHAR' }}</div>
+          </div>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-info">{{ 'LOGIN'}}</button>
+          <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
+            {{ 'LOGIN FAILED' }} {{errorMessage}}
+          </div>
+        </div>
+      </form>
+      <hr />
+      <p>{{ 'NO ACCOUNT' }}</p>
+      <a href="signup" class="btn btn-success">{{ 'SIGN UP' }}</a>
+    </div>
+  </ng-template>
