--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,48 @@
-<p>
-  register works!
-</p>
+<div *ngIf="isSignedUp; else signupForm">
+  {{ 'REGISTRATION SUCCESS'}}
+</div>
+
+<ng-template #signupForm>
+  <div class="container center-div" style="max-width:350px;">
+    <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+      <div class="form-group">
+        <label for="name">{{ 'NAME'}}</label>
+        <input type="text" class="form-control" name="name" [(ngModel)]="form.name" #name="ngModel" required />
+        <div *ngIf="f.submitted && name.invalid">
+          <div *ngIf="name?.errors.required">{{ 'NAME IS REQUIRED'}}</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="username">{{ 'USERNAME'}}</label>
+        <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
+          required />
+        <div *ngIf="f.submitted && username.invalid">
+          <div *ngIf="username?.errors.required">{{ 'USERNAME IS REQUIRED' }}</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="email">{{ 'EMAIL' }}</label>
+        <input type="text" class="form-control" name="email" [(ngModel)]="form.email" #email="ngModel" required email />
+        <div *ngIf="f.submitted && email.invalid">
+          <div *ngIf="email?.errors.required">{{ 'EMAIL IS REQUIRED' }}</div>
+          <div *ngIf="email?.errors.email">{{ 'EMAIL MUST BE VALID' }}</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password">{{ 'PASSWORD' }}</label>
+        <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
+          required minlength="6" />
+        <div *ngIf="f.submitted && password.invalid">
+          <div *ngIf="password?.errors.required">{{ 'PASSWORD IS REQUIRED'  }}</div>
+          <div *ngIf="password?.errors.minlength">{{ 'PASSWORD 6 CHAR' }}</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary">{{ 'REGISTER'}}</button>
+        <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">
+          {{ 'SIGNUP FAILED' }}<br/>{{errorMessage}}
+        </div>
+      </div>
+    </form>
+  </div>
+</ng-template>
