Sprint#3, Task#184, dodaje przycisk który pojawia się gdy jest się adminem

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,9 @@
         <div class="row">
             <img class="image" src="/assets/img/logo.png">
         </div>
-          <br><br>
+        <div class="row">
+          <button *ngIf="info.authority === 'ROLE_ADMIN'" >START</button>
+        </div>
         <div class="row">
           <label>Wyszukiwanie
           <br><input class="input" [(ngModel)]="searchText" placeholder="Search">
