--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -5,14 +5,14 @@
             <tr>
               <td>
                 <a href={{book.url}}>
-                  <img class="cover" src="{{book.image}}">
+                  <img  src="{{book.image}}">
                 </a>
               </td>
               <td>
                 <table>
                   <tr>
                     <td>
-                      <h5 class="title" >{{book.title}}</h5>
+                      <h5  >{{book.title}}</h5>
 
                     <b>Author:</b>{{book.authors}}
                     <br>
@@ -27,8 +27,8 @@
                 <table>
                   <tr>
                     <td>
-                      <b class="price">{{book.price}}</b>
-                      <h6 class="promotionPrice">{{book.promotionalPrice}}</h6>
+                      <b >{{book.price}}</b>
+                      <h6 >{{book.promotionalPrice}}</h6>
                     </td>
                   </tr>
                 </table>
@@ -38,8 +38,7 @@
           </table>
     </div>
     <div class="col">
-
-
+      <canvas id="canvas">{{chart}}</canvas>
     </div>
   </div>
 
