--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,47 +1,35 @@
 <div class="container">
   <div class="row">
-    <div class="col" style="text-align: center;">
-        <table>
-            <tr>
-              <td>
-                <a href={{book?.url}}>
+    <div class="col col-centered">
+        <div class="row">
+          <div class="col">
+              <a href={{book?.url}}>
                   <img style="height: 200px" src="{{book?.image}}">
                 </a>
-              </td>
-              <td>
-                <table>
-                  <tr>
-                    <td>
-                      <h5  >{{book?.title}}</h5>
+          </div>
+          <div class="col">
+              <h5  >{{book?.title}}</h5>
 
-                    <b>Author:</b>{{book?.authors}}
-                    <br>
-                    <p>
-                      <b>Bookstore</b> {{book?.bookstore}}
-                    </p>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-              <td>
-                <table>
-                  <tr>
-                    <td>
-                      <b >{{book?.price}}</b>
-                      <h6 >{{book?.promotionalPrice}}</h6>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-              <td>
-                <button (click)="backToHome()">↩</button>
-              </td>
-            </tr>
-        </table>
-
+              <b>Author:</b>{{book?.authors}}
+              <br>
+              <p>
+                <b>Bookstore</b> {{book?.bookstore}}
+              </p>
+          </div>
+          <div class="col">
+              <b >{{book?.price}}</b>
+              <h6 >{{book?.promotionalPrice}}</h6>
+          </div>
+          <div class="col">
+              <button (click)="backToHome()">↩</button>
+          </div>
+        </div>
     </div>
   </div>
+  <br>
   <div class="row">
-      <canvas id="canvas">{{chart}}</canvas>
+    <div class="col col-offset-5">
+        <canvas id="canvas">{{chart}}</canvas>
+    </div>
   </div>
 </div>
