Sprint#3, Task#199, dodaje navbar
 - Navbar z przyciskami Logowania i wylogowywania
 - Logo dodane na początku navbaru - po wciśnieniu przekierowanie do strony domowej

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -28,7 +28,7 @@
   </div>
   <br>
   <div class="row">
-    <div class="col col-offset-5">
+    <div class="col-6 offset-3">
         <canvas id="canvas">{{chart}}</canvas>
     </div>
   </div>
