Sprint#3, Task#200 , dodaje przyciski do paginacji
- przycisk select do wyboru sortowania
- przyciski do przechodzenia miedzy stronami z książkami:

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,7 @@ img:hover {
   cursor: pointer;
 }
 
-border {
-  border: 2px solid #ccc;
+.border {
+  border-color: 1px solid rgb(55,46,41);
+  border-radius: 2em;
 }
