--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -53,6 +53,10 @@ table tr td {
   background: white;
 }
 
+.sort-image {
+  height: 20px;
+}
+
 .input {
   width: 50%;
   border: 1px solid #ccc;
@@ -62,5 +66,27 @@ table tr td {
 
 .row {
   border: 1px solid #ccc;
+}
+
+.border {
+  border-radius: 2em;
+}
+
+.previous {
+  font-size: 200%;
+  float: left;
+}
+
+.next {
+  font-size: 200%;
+  float: right;
+}
+
+.previous:hover {
+  cursor: pointer;
+}
+
+.next:hover {
+  cursor: pointer;
 }
 
