--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,24 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light border" >
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
   <a><img class="navbar-brand img" routerLink="/" src="/assets/img/logo.png"></a>
-
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0" routerLinkActive="active">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="home">Home</a>
+  <div class="collapse navbar-collapse border" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 border" routerLinkActive="active">
+      <li class="nav-item border">
+        <a class="nav-link" routerLink="home">   Home</a>
       </li>
       <li class="nav-item" *ngIf="!authority">
         <a class="nav-link" routerLink="auth/login">Login</a>
       </li>
     </ul>
-
-    <ul class="navbar-nav">
-      <li class="nav-item" *ngIf="authority">
-        <a class="nav-link" (click)="logout()">logout</a>
+    <ul class="navbar-nav border">
+      <li class="nav-item border" *ngIf="authority">
+        <a class="nav-link" (click)="logout()">⍇</a>
       </li>
     </ul>
   </div>
-
 </nav>
-
-
-<div style="text-align: center">
+<div style="text-align:center">
   <br>
   <router-outlet></router-outlet>
 </div>
