Sprint#5, Task#253, dodaje id do modelu ksiązki i przesyła go dalej

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -17,7 +17,7 @@
               </p>
           </div>
           <div class="col">
-              <b >{{book?.price}}</b>
+              <b >{{book?.price | number: '1.2'}}</b>
               <h6 >{{book?.promotionalPrice}}</h6>
           </div>
           <div class="col">
