--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-  <a><img class="navbar-brand img" routerLink="/" src="/assets/img/logo.png"></a>
-  <div class="collapse navbar-collapse border" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 border" routerLinkActive="active">
-      <li class="nav-item border">
-        <a class="nav-link" routerLink="home">   Home</a>
-      </li>
-      <li class="nav-item" *ngIf="!authority">
-        <a class="nav-link" routerLink="auth/login">Login</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav border">
-      <li class="nav-item border" *ngIf="authority">
-        <a class="nav-link" (click)="logout()">⍇</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<app-nav></app-nav>
 <div style="text-align:center">
   <br>
   <router-outlet></router-outlet>
