Sprint#6, Task#8, poprawia tworzenie nowego użytkownika, wylogowywanie oraz wybór książki
 - Admin może tworzyć nowego użytkownika nadając mu role - admina lub usera
 - Przycisk logowania pojawia się gdy nie jesteśmy zalogowani i znika gdy się zalogujemy
 - j.w tylko odwrotnie działa przycisk Wyloguj umiejscowiony na navbarze
 - Poprawiony sposób wyboru pojedyńczej książki - powrót do url jako klucza

--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -34,8 +34,8 @@
         <div class="form-group">
             <fieldset>
                 <legend>Jaka rola?</legend>
-                <input type="checkbox"  [(ngModel)]="form.admin" [ngModelOptions]="{standalone: true}" [value]="Role_ADMIN">Admin<br>
-                <input type="checkbox"  [(ngModel)]="form.user" [ngModelOptions]="{standalone: true}" [value]="Role_USER">User<br>
+                <input type="checkbox"  [(ngModel)]="form.admin" [ngModelOptions]="{standalone: true}">Admin
+                <input type="checkbox"  [(ngModel)]="form.user" [ngModelOptions]="{standalone: true}" >User<br>
             </fieldset>
         </div>
         <div class="form-group">
