--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,19 +3,18 @@
   <div class="collapse navbar-collapse border" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0 border" routerLinkActive="active">
       <li class="nav-item border">
-        <a class="nav-link" routerLink="home">   Home</a>
+        <a class="nav-link" routerLink="home">   Strona Główna</a>
       </li>
-      <li class="nav-item" *ngIf="!authority">
-        <a class="nav-link" id="login" routerLink="auth/login">Login</a>
+      <li class="nav-item" *ngIf="!roles">
+        <a class="nav-link" id="login" routerLink="auth/login">Logowanie</a>
       </li>
       <li class="nav-item" *ngIf="roles === 'ROLE_ADMIN'">
-      <!-- <li class="nav-item"> -->
-        <a class="nav-link" id="newUser" routerLink="newuser">Create User</a>
+        <a class="nav-link" id="newUser" routerLink="newuser">Dodaj użytkownika</a>
       </li>
     </ul>
     <ul class="navbar-nav border">
-      <li class="nav-item border" >
-        <a class="nav-link" (click)="logout()">dupa</a>
+      <li class="nav-item border" *ngIf="roles">
+        <a class="nav-link" (click)="logout()">Wyloguj</a>
       </li>
     </ul>
   </div>
