Sprint#6, Task#8, poprawia zmiany po recenzji
 - zmiana serwera na heroku
 - zmiana nazwy metody oraz języka id w przypadku sotowania

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
         <div class="row">
           <span style="width: 10%"><img class="sort-image"  src="assets/img/sort.png"></span>
           <select class="input" style="width: 90%; float: right;" (change)="filterOption($event)" >
-              <option id="sortowanie" value="" selected disabled hidden>Sortowanie</option>
+              <option id="sorting" value="" selected disabled hidden>Sortowanie</option>
               <option value="PROMOTIONAL_PRICE_ASCENDING">Od najniższej ceny promocyjnej</option>
               <option value="PROMOTIONAL_PRICE_DESCENDING">Od najwyższej ceny promocyjnej</option>
               <option value="PRICE_ASCENDING">Od najniższej ceny detalicznej</option>
