Sprint#6 Task#9 Naprawia wyśiwtlanei pojednynczej ksiazki

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -97,7 +97,7 @@
               </table>
             </td>
             <td>
-              <button id="{{book.url}}" (click)="redirectToBook($event)">Sprawdź</button>
+              <button id="{{book.id}}" (click)="redirectToBook($event)">Sprawdź</button>
             </td>
           <br>
         </tr>
