Sprint#6, Task#12 dodaje przycisk przekierowujący do zalogowania
 - gdy jest się niezalogowany a chce się przeglądać ceny w czasie  - przekiewuje na logowanie
 - gdy jest się zalogowanym można sprawdzić książkę

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -96,9 +96,15 @@
                 </tr>
               </table>
             </td>
-            <td>
-              <button id="{{book.id}}" (click)="redirectToBook($event)">Sprawdź</button>
+
+            <td *ngIf="roles; else redirectToBookTemplate">
+                <button id="{{book.id}}" (click)="redirectToBook($event)">Sprawdź</button>
             </td>
+            <ng-template #redirectToBookTemplate>
+                <td>
+                    <button (click)="toLoginSite()">Tylko dla zalogowanych</button>
+                </td>
+            </ng-template>
           <br>
         </tr>
       </table>
